--- a/primer-pagina/index.html
+++ b/primer-pagina/index.html
@@ -4,24 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Curriculum </title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!-- Comentario -->
-    <h1>Blog Personal</h1>
-    <h2>Nombre:</h2>
-    <p>Blanca Benítez Lozano</p>
-    <h3>Descripción:</h3>
-    <p>Hola me llamo Blanca, me considero una persona tranquila, amigable y sencilla</p>
-    <h3>Ocupación:</h3>
-    <p>Actualmente trabajo en una empresa de telecomunicaciones, llevo 3 años en esta empresa, mi puesto es ser Ing. en Noc resolviendo problemas</p>
-    <h3>Hobbies:</h3>
-    <p>Me gusta mucho ir al cine y ver series. Otro hobbie que tengo es que me gusta mucho leer libros y mi autor favorito
-    es Stephen King. También me gusta ir a comer a lugares nuevos y ricos. También me gusta jugar juegos de mesa.
-    </p>
-    <img src="https://www.elcorreogallego.es/binrepository/900x675/0c85/900d506/none/102922340/XSVD/sorpresa_793570_manual_CG1055162_MG155523406.jpg" height="150" width="150" alt="Cara"> <!--src: source alt: información que le damos a la imagen-->
-    <h3>Redes sociales:</h3>
-    <a href="https://www.facebook.com/?locale=es_LA">Da clic aqui</a>
+    <header>
+        <h1>Mi Nombre: Blanca Benitez</h1>
+        <h2>Profesión: Lic. Tecnologías de la Información</h2>
+    </header>
+
+    <section id="about">
+        <h2>Acerca de mi: </h2>
+        <p>Hola me llamo Blanca, me considero una persona tranquila, amigable y sencilla. 
+            Me gusta aprender cosas nuevas, me considero una persona responsable y trabajadora.
+        </p>
+    </section>
+
+    <section id="education">
+        <h2>Educación: </h2>
+        <ul>
+            <li>Preparatoria: Escuela Vocacional - Titulo obtenido año 2015</li>
+            <li>Universidad: Centro Universitario de Ciencias Economico adminstrativas -Titulo (en proceso)</li>
+        </ul>
+    </section>
+
+    <section id="experience">
+        <h2>Experiencia Laboral: </h2>
+        <ul>
+            <li>Empresa: Hemac Teleinformatica - Puesto: Ingeniero (a) Noc. - Puesto actual</li>
+        </ul>
+    </section>
+
+    <section id="skills">
+        <h2>Habilidades:</h2>
+        <ul>
+            <li>Trabajo bajo presión</li>
+            <li>Trabajo en equipo</li>
+            <li>Capacidad de escuchar</li>
+            <li>Trato amable hacia los demas</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Redes sociales: </h2>
+        <ol>
+            <li>Facebook</li>
+            <a href="https://www.facebook.com/?locale=es_LA">Da clic aqui</a>
+            <li>Instagram</li>
+            <a href="https://www.instagram.com/">Da clic aqui</a>
+            <li>Twitter</li>
+            <a href="https://twitter.com/i/flow/login">Da clic aqui</a>
+        </ol>
+    </section>
+
+    <footer>
+        <p>Contacto: blanca.beni.loz@gmail.com | Telefono: 123-456-7890</p>
+    </footer>
+
 </body>
 </html>
